--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -34,7 +34,7 @@
 # For nav.html in the _includes folder.
 mainnav:
     - name: Our Projects
-      class: projects navlink
+      class: projects menu-item
       link: /projects
       subitems:
           - name: Arduino
@@ -45,7 +45,7 @@ mainnav:
             link: /projects/general-electronics
 
     - name: Our Reviews
-      class: reviews navlink
+      class: reviews menu-item
       link: /review
       subitems:
           - name: Product Reviews
