Re-did navbar and footer links a bit
Removed 'Home' link in the navbar for now in case having one extra link makes the list of links too long for some desktop users.
Footer links now can be more easily clickable by the spacing around the text, instead of having to click right on the text. Good for accessibility.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
-- name: Home
-  link: /
-  class: home menu-item
+# - name: Home
+#   link: /
+#   class: home menu-item
 
 - name: Arduino Projects
   link: /projects/arduino
