Redid navbar styling
Links now have a larger, clickable region, with a slightly-narrow line spacing (for now until I find out how to get a larger navbar that also has the logo vertically-centred.

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -6,7 +6,7 @@
   link: /projects/raspberry-pi
   class: raspberry-pi footer-item
 
-- name: General Electronic Projects
+- name: General Electronics Projects
   link: /projects/gen-elec
   class: gen-elec footer-item
 
