--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@
   link: /projects/raspberry-pi
   class: raspberry-pi menu-item
 
-- name: General Electronic Projects
+- name: General Electronics Projects
   link: /projects/gen-elec
   class: gen-elec menu-item
 
