Added individual pages for projects/* and reviews/* and their title text
All pages are now ready for their content. Styling should then come after the content.

--- a/_data/grid-items/product.yml
+++ b/_data/grid-items/product.yml
@@ -13,7 +13,7 @@
 - name: "Review 005: Elecfreaks Micro:bit Tinker Kit"
   link: /reviews/product/review-005-elecfreaks-microbit-tinker-kit
 
-- name: 'Review 006: 1.3" i2c White OLED Display'
+- name: 'Review 006: 1.3" I2C White OLED Display'
   link: /reviews/product/review-006-13-i2c-white-oled-display
 
 - name: "Review 007: Raspberry Pi Dual Cooling Fan with the Thermal Tape Cooling Kit and the RAM Copper Heatsink"
