Finished first two pages of General Electronics
Also added the two new pages you made to be ready to finish later.

I realised that I might have to surround all <picture> blocks and clusters with a <div> to allow flexbox for responsiveness; the <div> would be the flexbox parent, while the <picture>s are the flexbox children.

Added comments in the .yml files to help follow the scheme when adding new pages in the future.

--- a/_data/grid-items/company.yml
+++ b/_data/grid-items/company.yml
@@ -1,3 +1,10 @@
+# When adding more pages to this folder, make sure to add in the information
+# as how they are here.
+# Make sure to create a new page in /reviews/company/ with the name
+# being *exactly* as it is in `link`, followed by the '.html' file extension
+# If text for `name` already has a " (double-quote) character, use the ' (single-
+# quote character) to surround the whole value of 'name'.
+
 - name: Seeed Studio Fusion
   link: /reviews/company/seeed-studio-fusion
 
