--- a/_data/grid-items/product.yml
+++ b/_data/grid-items/product.yml
@@ -1,3 +1,10 @@
+# When adding more pages to this folder, make sure to add in the information
+# as how they are here.
+# Make sure to create a new page in /reviews/product/ with the name
+# being *exactly* as it is in `link`, followed by the '.html' file extension
+# If text for `name` already has a " (double-quote) character, use the ' (single-
+# quote character) to surround the whole value of 'name'.
+
 - name: "Review 001: KY-008 Laser Module"
   link: /reviews/product/review-001-ky-008-laser-module
 
