Adding Project 021 page and listing
The HTML file is just the template from the other blank pages. It's 
basically meant to prepare it for the content from the original site.

If there is going to be a new page, then that page's existence must be 
put in the .yml file.

--- a/_data/grid-items/arduino.yml
+++ b/_data/grid-items/arduino.yml
@@ -67,3 +67,6 @@
 
 - name: 'Project 020: 1.3" 240x240 IPS TFT Display Module'
   link: /projects/arduino/project-020-13-240x240-ips-tft-display-module
+
+- name: 'Project 021: Liquid pH0-14 Detection Sensor'
+  link: /projects/arduino/project-021-arduino-liquid-ph0-14-detection-sensor
