Grid implemented on Projects and Reviews pages
Grid layout implemented with values from the pages' YML files in /_data/grid-items/.

Page entries now inside a group named "items". This is for a bit of organisation and letting the grid layout parts reside in the same file without possibly inadvertently messing something else up.

I couldn't figure out if using one layout file for all Projects and Reviews pages was possible, so there's now a separate layout page for the corresponding pages.

Lots of the removals in styles-grid.css was from copying what was made to styles.css. They weren't needed, so removing them wouldn't hurt.

Added a README in /_data/grid-items/ that explains how to modify the values for the grid layout in the /_data/grid-items YML files.

--- a/_data/grid-items/company.yml
+++ b/_data/grid-items/company.yml
@@ -1,24 +1,28 @@
-# When adding more pages to this folder, make sure to add in the information
-# as how they are here.
-# Make sure to create a new page in /reviews/company/ with the name
-# being *exactly* as it is in `link`, followed by the '.html' file extension
-# If text for `name` already has a " (double-quote) character, use the ' (single-
-# quote character) to surround the whole value of 'name'.
+# When adding more pages to this file, make sure to add in the information as how they are here.
+# Make sure to create a new page in /reviews/company/ with the name being *exactly* as it is in `link`, followed by the ".html" file extension.
 
-- name: Seeed Studio Fusion
-  link: /reviews/company/seeed-studio-fusion
+# If text for `name` already has a " (double-quote) character, use the ' (single-quote character) to surround the whole value of 'name'.
+# Quotes are needed to keep the colons and possibly any other non-alphanumeric characters in `name` from being interpreted.
 
-- name: Bittele Electronics
-  link: /reviews/company/bittele-electronics
+item-count: 5
+columns-for-items: 3
+rows-for-items: 2
 
-- name: JLCPCB
-  link: /reviews/company/jlcpcb
+items:
+  - name: Seeed Studio Fusion
+    link: /reviews/company/seeed-studio-fusion
 
-- name: Win Source Electronics
-  link: /reviews/company/win-source-electronics
+  - name: Bittele Electronics
+    link: /reviews/company/bittele-electronics
 
-- name: LCSC Electronics
-  link: /reviews/company/lcsc-electronics
+  - name: JLCPCB
+    link: /reviews/company/jlcpcb
 
-- name: PCBWay
-  link: /reviews/company/pcbway
+  - name: Win Source Electronics
+    link: /reviews/company/win-source-electronics
+
+  - name: LCSC Electronics
+    link: /reviews/company/lcsc-electronics
+
+  - name: PCBWay
+    link: /reviews/company/pcbway
