--- a/_data/grid-items/ras-pi.yml
+++ b/_data/grid-items/ras-pi.yml
@@ -1,18 +1,22 @@
-# When adding more pages to this folder, make sure to add in the information
-# as how they are here.
-# Make sure to create a new page in /projects/raspberry-pi/ with the name
-# being *exactly* as it is in `link`, followed by the '.html' file extension
-# If text for `name` already has a " (double-quote) character, use the ' (single-
-# quote character) to surround the whole value of 'name'.
+# When adding more pages to this file, make sure to add in the information as how they are here.
+# Make sure to create a new page in /projects/raspberry-pi/ with the name being *exactly* as it is in `link`, followed by the ".html" file extension.
 
-- name: "Project 001: Dual Cooling Fan with the Thermal Tape Cooling Kit Setup"
-  link: /projects/raspberry-pi/project-001-dual-cooling-fan-with-the-thermal-tape-cooling-kit-setup
+# If text for `name` already has a " (double-quote) character, use the ' (single-quote character) to surround the whole value of 'name'.
+# Quotes are needed to keep the colons and possibly any other non-alphanumeric characters in `name` from being interpreted.
 
-- name: "Project 002: RAM Copper Heatsink Setup"
-  link: /projects/raspberry-pi/project-002-ram-copper-heatsink-setup
+item-count: 4
+columns-for-items: 2
+rows-for-items: 2
 
-- name: "Project 003: 5-inch HDMI Capacitive Touch Screen Display Setup"
-  link: /projects/raspberry-pi/project-003-5-inch-hdmi-capacitive-touch-screen
+items:
+  - name: "Project 001: Dual Cooling Fan with the Thermal Tape Cooling Kit Setup"
+    link: /projects/raspberry-pi/project-001-dual-cooling-fan-with-the-thermal-tape-cooling-kit-setup
 
-- name: "Project 004: Maker pHAT Setup"
-  link: /projects/raspberry-pi/project-004-maker-phat-setup
+  - name: "Project 002: RAM Copper Heatsink Setup"
+    link: /projects/raspberry-pi/project-002-ram-copper-heatsink-setup
+
+  - name: "Project 003: 5-inch HDMI Capacitive Touch Screen Display Setup"
+    link: /projects/raspberry-pi/project-003-5-inch-hdmi-capacitive-touch-screen
+
+  - name: "Project 004: Maker pHAT Setup"
+    link: /projects/raspberry-pi/project-004-maker-phat-setup
