--- a/_data/grid-items/arduino.yml
+++ b/_data/grid-items/arduino.yml
@@ -1,72 +1,76 @@
-# When adding more pages to this folder, make sure to add in the information
-# as how they are here.
-# Make sure to create a new page in /projects/arduino/ with the name
-# being *exactly* as it is in `link`, followed by the '.html' file extension
-# If text for `name` already has a " (double-quote) character, use the ' (single-
-# quote character) to surround the whole value of 'name'.
+# When adding more pages to this file, make sure to add in the information as how they are here.
+# Make sure to create a new page in /projects/arduino/ with the name being *exactly* as it is in `link`, followed by the ".html" file extension.
 
-- name: Arduino Setup
-  link: /projects/arduino/arduino-setup
+# If text for `name` already has a " (double-quote) character, use the ' (single-quote character) to surround the whole value of 'name'.
+# Quotes are needed to keep the colons and possibly any other non-alphanumeric characters in `name` from being interpreted.
 
-- name: "Project 001: LEDs"
-  link: /projects/arduino/project-001-led
+item-count: 22
+columns-for-items: 3
+rows-for-items: 8
 
-- name: "Project 002: HC-SR04 Ultrasonic Sensor"
-  link: /projects/arduino/project-002-hc-sr04-ultrasonic-sensor
+items:  
+  - name: Arduino Setup
+    link: /projects/arduino/arduino-setup
 
-- name: "Project 003: LM35 Temperature Sensor"
-  link: /projects/arduino/project-003-lm35-temperature-sensor
+  - name: "Project 001: LEDs"
+    link: /projects/arduino/project-001-led
 
-- name: "Project 004: PIR Motion Sensor"
-  link: /projects/arduino/project-004-pir-motion-sensor
+  - name: "Project 002: HC-SR04 Ultrasonic Sensor"
+    link: /projects/arduino/project-002-hc-sr04-ultrasonic-sensor
 
-- name: "Project 005: DHT Humidity Sensor"
-  link: /projects/arduino/project-005-dht-humidity-sensor
+  - name: "Project 003: LM35 Temperature Sensor"
+    link: /projects/arduino/project-003-lm35-temperature-sensor
 
-- name: "Project 006: Infrared Proximity Sensor"
-  link: /projects/arduino/project-006-infrared-proximity-sensor
+  - name: "Project 004: PIR Motion Sensor"
+    link: /projects/arduino/project-004-pir-motion-sensor
 
-- name: "Project 007: KY-008 Laser Module"
-  link: /projects/arduino/project-007-ky-008-laser-module
+  - name: "Project 005: DHT Humidity Sensor"
+    link: /projects/arduino/project-005-dht-humidity-sensor
 
-- name: "Project 008: Seeeduino v4.2 Setup"
-  link: /projects/arduino/project-008-seeeduino-v42-setup
+  - name: "Project 006: Infrared Proximity Sensor"
+    link: /projects/arduino/project-006-infrared-proximity-sensor
 
-- name: "Project 009: TEMT6000 Ambient Light Sensor"
-  link: /projects/arduino/project-009-temt6000-ambient-light-sensor
+  - name: "Project 007: KY-008 Laser Module"
+    link: /projects/arduino/project-007-ky-008-laser-module
 
-- name: "Project 010: Grove - Dust Sensor (PPD42NS)"
-  link: /projects/arduino/project-010-grove-dust-sensor-ppd42ns
+  - name: "Project 008: Seeeduino v4.2 Setup"
+    link: /projects/arduino/project-008-seeeduino-v42-setup
 
-- name: 'Project 011: 1.3" I2C White OLED Display'
-  link: /projects/arduino/project-011-13-i2c-white-oled-display
+  - name: "Project 009: TEMT6000 Ambient Light Sensor"
+    link: /projects/arduino/project-009-temt6000-ambient-light-sensor
 
-- name: "Project 012: Ublox Neo-7N GPS Module"
-  link: /projects/arduino/project-012-ublox-neo-7n-gps-module
+  - name: "Project 010: Grove - Dust Sensor (PPD42NS)"
+    link: /projects/arduino/project-010-grove-dust-sensor-ppd42ns
 
-- name: "Project 013: Maker Uno Setup"
-  link: /projects/arduino/project-013-maker-uno-setup
+  - name: 'Project 011: 1.3" I2C White OLED Display'
+    link: /projects/arduino/project-011-13-i2c-white-oled-display
 
-- name: "Project 014: MLX90614 Infrared Temperature Sensor"
-  link: /projects/arduino/project-014-mlx90614-infrared-temperature-sensor
+  - name: "Project 012: Ublox Neo-7N GPS Module"
+    link: /projects/arduino/project-012-ublox-neo-7n-gps-module
 
-- name: "Project 015: Reyax RYLR896 LoRa Transceiver Module"
-  link: /projects/arduino/project-015-reyax-ryl896-lora-transceiver-module
+  - name: "Project 013: Maker Uno Setup"
+    link: /projects/arduino/project-013-maker-uno-setup
 
-- name: "Project 016: Piezo Buzzer (Christmas Special)"
-  link: /projects/arduino/project-016-piezo-buzzer
+  - name: "Project 014: MLX90614 Infrared Temperature Sensor"
+    link: /projects/arduino/project-014-mlx90614-infrared-temperature-sensor
 
-- name: "Project 017: BH1750 Light Sensor"
-  link: /projects/arduino/project-017-bh1750-light-sensor
+  - name: "Project 015: Reyax RYLR896 LoRa Transceiver Module"
+    link: /projects/arduino/project-015-reyax-ryl896-lora-transceiver-module
 
-- name: "Project 018: MBE280 Environmental Sensor"
-  link: /projects/arduino/project-018-mbe280-environmental-sensor
+  - name: "Project 016: Piezo Buzzer (Christmas Special)"
+    link: /projects/arduino/project-016-piezo-buzzer
 
-- name: "Project 019: TFT LCD Display Module with Resistive Touch"
-  link: /projects/arduino/project-019-tft-lcd-display-module-with-resistive-touch
+  - name: "Project 017: BH1750 Light Sensor"
+    link: /projects/arduino/project-017-bh1750-light-sensor
 
-- name: 'Project 020: 1.3" 240x240 IPS TFT Display Module'
-  link: /projects/arduino/project-020-13-240x240-ips-tft-display-module
+  - name: "Project 018: MBE280 Environmental Sensor"
+    link: /projects/arduino/project-018-mbe280-environmental-sensor
 
-- name: 'Project 021: Liquid pH0-14 Detection Sensor'
-  link: /projects/arduino/project-021-arduino-liquid-ph0-14-detection-sensor
+  - name: "Project 019: TFT LCD Display Module with Resistive Touch"
+    link: /projects/arduino/project-019-tft-lcd-display-module-with-resistive-touch
+
+  - name: 'Project 020: 1.3" 240x240 IPS TFT Display Module'
+    link: /projects/arduino/project-020-13-240x240-ips-tft-display-module
+
+  - name: 'Project 021: Liquid pH0-14 Detection Sensor'
+    link: /projects/arduino/project-021-arduino-liquid-ph0-14-detection-sensor
