Altered the positioning of the banner image for General Electronic Projects as well as the title itself & navbar button text.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,8 +6,8 @@
   link: /projects/raspberry-pi
   class: raspberry-pi menu-item
 
-- name: General Electronics Projects
-  link: /projects/general-electronics
+- name: General Electronic Projects
+  link: /projects/general-electronic
   class: gen-elec menu-item
 
 - name: Product Reviews
