- Altered the min width of the slicknav menu for phones to 280px and the max width to 540px. - Altered the subtitle positioning for iPad resolutions by adding another media query.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@
   link: /projects/raspberry-pi
   class: raspberry-pi menu-item
 
-- name: General Electronic Projects
+- name: Gen. Elec Projects
   link: /projects/general-electronics
   class: gen-elec menu-item
 
